<resources>
    <string name="app_name">My Coaches Diary</string>
    <string name="message_internet_unavailable">Internet not available</string>
    <string name="prompt_email">Email</string>
    <string name="switch_to_register">Nemáte účet? Zaregistrujte se zde.</string>
    <string name="switch_to_login">Již máte účet? Přihlašte se zde.</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >7 characters</string>
    <string name="password_match_error">Zadaná hesla se musí shodovat.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user">User</string>
    <string name="unknown">Unknown</string>
    <string name="message_logout_success">Logged out successfully</string>
    <string name="label_authenticate">Authenticate</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="welcome">Welcome</string>
    <string name="action_register">Zaregistrovat</string>
    <string name="my_teams">Moje týmy</string>
    <string name="trainings">tréninky</string>
    <string name="exercise_library">cvičení</string>
    <string name="matches">zápasy</string>
    <string name="stats">statistiky</string>
    <string name="name">název</string>
    <string name="description">popis</string>
    <string name="category">Kategorie</string>

    <string name="prompt_add_image">Přidat obrázek</string>
    <string name="prompt_change_image">Změnit obrázek</string>
    <string name="exercise_detail">detail cvičení</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_exercise">Nové cvičení</string>
    <string name="save">uložit</string>
    <string name="season_format">yyyy/yyyy</string>
    <string name="season">sezóna</string>
    <string name="team_detail">tým</string>
    <string name="home">domů</string>
    <string name="set_team">nastavit tým</string>
    <string name="no_team_error">Nemáte nastaven aktuální tým, tím pádem není možné zobrazit tuto sekci, učiňte tak v sekci moje týmy.</string>
    <string name="delete_team_alert">Doopravdy chcete odstranit tento tým? Při jeho odstranění dojde i k odstranění jeho tréninků, zápasů a statistik.</string>
    <string name="yes">ANO</string>
    <string name="no">NE</string>
    <string name="add_team">Vytvořit tým</string>
    <string name="set_as_current_team">Nastavit jako aktuální tým</string>
    <string name="delete_trainig_alert">Doopravdy chcete odstranit tento trénink? Společně s ním budou odstraněny i všechny jemu podřízené záznamy.</string>
    <string name="add_training">Nový trénink</string>
    <string name="place">místo</string>
    <string name="date">datum</string>
    <string name="startTime">začátek</string>
    <string name="type">typ</string>
    <string name="endTime">konec</string>
    <string name="rating">úroveň</string>
    <string name="rating_helper_text">Úroveň je celé číslo v rozmezí 0–10.</string>
    <string name="players_attendance">hráčů</string>
    <string name="goalkeepers_attendance">brankářů</string>
    <string name="delete_exercise_alert">Určitě chcete odstranit toto cvičení? Jeho záznamy v rámci tréninků zůstanou uložené, ale nebude možné zobrazit detaily tohoto cvičení.</string>
    <string name="impossible_delete_exercise_alert">Nejste autorem tohoto cvičení, takže jej nemůžete odstranit.</string>
    <string name="close">zavřít</string>
    <string name="current_team">aktuální tým</string>
    <string name="info">informace</string>
    <string name="exercises">cvičení</string>
    <string name="delete_exercise_from_training_alert">Doopravdy chcete odstranit toto cvičení z tréninku?</string>
    <string name="no_team_selected">Nemáte zvolen tým</string>
    <string name="delete_match_alert">Doopravdy chcete odstranit tento zápas? Společně s ním zaniknout i jeho statistiky.</string>
    <string name="opponent">soupeř</string>
    <string name="match_type">typ zápasu</string>
    <string name="playingTime">hrací čas (min)</string>
    <string name="match_detail">detail zápasu</string>
    <string name="note">poznámka</string>
    <string name="powerPlays">přesilovky</string>
    <string name="score">skóre</string>
    <string name="shots">střely</string>
    <string name="shotsToBlock">střely do bloku</string>
    <string name="shotsOutside">střely mimo</string>
    <string name="set_current_team">nastavit aktuální tým</string>
    <string name="save_changes">uložit změny</string>
    <string name="logout_message">Doopravdy se chcete odhlásit?</string>
    <string name="apply_filter">aplikovat filtr</string>
    <string name="from">Od</string>
    <string name="to">Do</string>
    <string name="reset_password">změna hesla</string>
    <string name="logout">odhlásit se</string>
    <string name="reset_password_text">Zapomněli jste heslo? Obnovte si ho zde.</string>
    <string name="renew_password">Obnovení hesla</string>
    <string name="send_new_password">odeslat nové heslo</string>
    <string name="time_hint">hh:mm</string>
    <string name="date_from">datum od</string>
    <string name="logout_title">logout</string>
    <string name="loadingStats">Načítám statistiky…</string>
    <string name="wins">výhry</string>
    <string name="draws">remízy</string>
    <string name="losses">prohry</string>
    <string name="winPercentage">% výher</string>
    <string name="goalkeeprPercentage">% zákroků</string>
    <string name="shots_opponent">střely soupeř</string>
    <string name="goals">góly</string>
    <string name="shots_on_goal">na bránu</string>
    <string name="ToBlock">do bloku</string>
    <string name="outside">mimo</string>
    <string name="password">heslo</string>
    <string name="password_check">heslo znovu</string>
    <string name="training_detail">detail tréninku</string>
    <string name="add_match">Přidat zápas</string>
    <string name="date_to">datum do</string>
    <string name="time_from">začátek tréninku</string>
    <string name="time_to">konec tréninku</string>
    <string name="goalkeeprsHint">Povolený počet je 0–20.</string>
    <string name="playersHint">Povolený počet je 0–50.</string>
    <string name="changes_were_saved">změny byly úspěšně uloženy</string>
    <string name="wrong_values_save_error">Nemáte správně vyplněny hodnoty, uložení neproběhlo!</string>
    <string name="scoreOpponent">góly soupeř</string>
    <string name="team">tým</string>
    <string name="success">z toho úspěšných</string>
    <string name="playingTimeHint">Jako hrací čas jsou dovoleny hodnoty 0–100.</string>
    <string name="exercise_error">Musíte vyplnit název cvičení a jeho popis, jinak jej není možné vytvořit.</string>
    <string name="exercise_created">Cvičení bylo vytvořeno.</string>
    <string name="exercise_already_in_training">Cvičení již je v tréninku, proto nelze přidat.</string>
    <string name="training_stats_graph_title">Kategorie cvičení v tréninku [min]</string>
    <string name="match_stats">Zápasové statistiky</string>
    <string name="training_stats">Tréninkové statistiky</string>
    <string name="get_training_stats">Načíst tréninkové statistiky</string>
    <string name="get_match_stats">Načíst zápasové statistiky</string>
    <string name="date_error">Datum počátku je později než datum konce, takže filtr není možné provést.</string>
    <string name="exercise_time">čas cvičení</string>
    <string name="add_exercise_to_training">Přidat cvičení do tréninku</string>
    <string name="cancel">zrušit</string>
    <string name="exercise_time_must_be_between">Čas cvičení musí být mezi 1 minutou a 100 minutami.</string>
    <string name="loading_stats">Načítám statistiky...</string>
    <string name="advanced_stats">Porovnání se soupeři:</string>
    <string name="shot_stats">Statistiky střel:</string>
    <string name="sum">celkem</string>
    <string name="league">liga</string>
    <string name="tournament">turnaj</string>
    <string name="friendly">přátelák</string>
    <string name="no_data_found">Zadaným kritériím neodpovídají žádná data, zkusto to prosím znovu.</string>
    <string name="exercisesInTraining">Obsah tréninku</string>
    <string name="exercise_time_in_training">Celkový čas cvičení:</string>

    <string-array name="exercise_owner">
        <item>Jen moje cvičení</item>
        <item>Všechny cvičení</item>
    </string-array>

    <string-array name="match_category">
        <item>Přátelák</item>
        <item>Liga</item>
        <item>Turnaj</item>
    </string-array>

    <string-array name="match_category_filter">
        <item>Všechny zápasy</item>
        <item>Přátelák</item>
        <item>Liga</item>
        <item>Turnaj</item>
    </string-array>

    <string-array name="exercise_category">
        <item>Rozcvička</item>
        <item>Protažení</item>
        <item>Průpravné hry</item>
        <item>Kondice</item>
        <item>Střelecké cvičení</item>
        <item>Přečíslení</item>
        <item>Hra</item>
        <item>1 na 1</item>
        <item>HČJ</item>
    </string-array>

    <string-array name="stats_type">
        <item>Tréninkové statistiky</item>
        <item>Zápasové statistiky</item>
    </string-array>
</resources>
