<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_trainings"
        android:icon="@drawable/ic_trainings"
        android:title="@string/trainings" />

    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/ic_matches"
        android:title="@string/matches" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_stats"
        android:title="@string/stats" />

    <item
        android:id="@+id/navigation_exercise_library"
        android:icon="@drawable/ic_exercise_library"
        android:title="@string/exercise_library" />
</menu>
