<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="trainingModel"
            type="cz.lpatak.mycoachesdiary.ui.trainings.viewmodel.TrainingUIModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/players"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/players_attendance"
            app:layout_constraintEnd_toStartOf="@+id/goalkeepers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={trainingModel.players}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/playersText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:selectAllOnFocus="true"
            android:text="@string/playersHint"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/players"
            app:layout_constraintStart_toStartOf="@+id/players"
            app:layout_constraintTop_toBottomOf="@+id/players" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/goalkeepers"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_normal_margin"
            android:hint="@string/goalkeepers_attendance"
            app:layout_constraintEnd_toStartOf="@+id/rating"
            app:layout_constraintStart_toEndOf="@+id/players"
            app:layout_constraintTop_toTopOf="@id/players">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={trainingModel.goalkeepers}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/goalkeepers_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:selectAllOnFocus="true"
            android:text="@string/goalkeeprsHint"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/goalkeepers"
            app:layout_constraintStart_toStartOf="@+id/goalkeepers"
            app:layout_constraintTop_toBottomOf="@+id/goalkeepers" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rating"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_normal_margin"
            android:hint="@string/rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/goalkeepers"
            app:layout_constraintTop_toTopOf="@+id/goalkeepers">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={trainingModel.rating}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/ratingText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:selectAllOnFocus="true"
            android:text="@string/rating_helper_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/rating"
            app:layout_constraintStart_toStartOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/rating" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
